edited project name

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">DOLLAR$ & $EN$E</h3>
+              <h3 class="mb-0">DOLLARS & SENSE</h3>
 
               <ul>
                 <li>
