--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <a class="social-icon" href="https://github.com/Npcodes1"
               ><i class="fab fa-github"></i
             ></a>
-            <a class="social-icon" href="mailto:nicole1rock@gmail.com"
+            <a class="social-icon" href="mailto:nicolepaynedev@gmail.com"
               ><i class="far fa-regular fa-envelope"></i>
             </a>
           </div>
